Directories included in media store queries and basic directory and file structure is in place

--- a/app/src/main/res/layout/photo_cell.xml
+++ b/app/src/main/res/layout/photo_cell.xml
@@ -17,6 +17,7 @@
             android:id="@+id/photo_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="@android:color/background_light"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="@+id/photo_image"
             app:layout_constraintStart_toStartOf="@+id/photo_image"
