--- a/app/src/main/res/layout/photo_grid_frag.xml
+++ b/app/src/main/res/layout/photo_grid_frag.xml
@@ -4,14 +4,19 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <GridView
-            android:id="@+id/photo_grid"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:numColumns="auto_fit"
-            android:gravity="center"
-            android:stretchMode="columnWidth"
-            android:padding="8dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_height="match_parent">
+            <GridView
+                android:id="@+id/photo_grid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:numColumns="auto_fit"
+                android:gravity="center"
+                android:stretchMode="columnWidth"
+                android:padding="8dp"
+                app:layout_constraintTop_toTopOf="parent"/>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
